<resources>
    <string name="app_name">Android Navigation Implementation</string>
    <!-- Strings related to login -->
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_logged_in">Logged in!</string>
    <string name="action_signed_up">Signed Up!</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_full_name">Not a valid full name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_user">Welcome User</string>
    <string name="welcome_x_y">Welcome %s, successfully %s</string>
    <string name="action_welcome">Go to Welcome</string>

    <string name="menu_sent">Sent</string>
    <string name="menu_inbox">Inbox</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_push">Push</string>
    <string name="action_send">Send</string>
    <string name="agree">Agree</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agreement">Agreement</string>
    <string name="ps">PS</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="recipient">Recipient</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="to_email">To: %1$s</string>
    <string name="from_email">From: %1$s</string>
    <string name="presentation">Presentation</string>
    <string name="create_letter">Create Letter</string>

</resources>