<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.androidnavigationimplementation.ui.viewmodel.LettersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.CreateLetterFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRecipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipient"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.recipient}"
                tools:text="Recipient" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layoutRecipient">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@={viewModel.title}"
                tools:text="Title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layoutTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@={viewModel.description}"
                tools:text="Description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ps"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/layoutDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={viewModel.ps}"
                tools:text="PS" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{safeUnbox(viewModel.loading)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
